--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,28 +26,64 @@ add_library(service_pb_lib ${SERVICE_PB})
 target_link_libraries(service_pb_lib source_pb_lib)
 
 
-add_library(saltfish_service service.hpp service.cpp ${SERVICE_PB})
-add_library(saltfish_server server.hpp server.cpp ${SERVICE_PB})
-add_library(riak_proxy riak_proxy.hpp riak_proxy.cpp)
+add_library(
+  riak_proxy
+    riak_proxy.hpp
+    riak_proxy.cpp
+)
+target_link_libraries(
+  riak_proxy
+    riak-cpp
+    ${Boost_LIBRARIES}
+    ${GLOG_LIBRARY}
+    ${PROTOBUF_LIBRARY}
+)
+
+
+add_library(
+  saltfish_service
+    service.hpp
+    service.cpp
+    riak_proxy.hpp
+    ${SERVICE_PB}
+)
+target_link_libraries(
+  saltfish_service
+    riak_proxy
+    source_pb_lib
+    service_pb_lib
+    rpcz
+    ${Boost_LIBRARIES}
+    ${GLOG_LIBRARY}
+    ${PROTOBUF_LIBRARY}
+)
+
+add_library(
+  saltfish_server
+    server.hpp
+    server.cpp
+    service.hpp
+    riak_proxy.hpp
+    ${SERVICE_PB}
+)
+target_link_libraries(
+  saltfish_server
+    riak_proxy
+    saltfish_service
+    ${Boost_LIBRARIES}
+    ${GLOG_LIBRARY}
+    ${PROTOBUF_LIBRARY}
+)
 
 
 add_executable(
   saltfish
     main.cpp
-    riak_proxy.hpp
     server.hpp
-    ${SERVICE_PB}
 )
-
 target_link_libraries(
   saltfish
-    source_pb_lib
-    service_pb_lib
-    saltfish_service
-    riak_proxy
-    riak-cpp
-    rpcz
-    zmq
+    saltfish_server
     ${Boost_LIBRARIES}
     ${GLOG_LIBRARY}
     ${PROTOBUF_LIBRARY}
@@ -56,50 +92,50 @@ target_link_libraries(
 add_dependencies(${PROJECT_NAME} SOURCE_PB_PY SERVICE_PB_PY SERVICE_RPCZ_PY)
 
 
-add_executable(
-  hwclient
-    hwclient.cpp
-)
+# add_executable(
+#   hwclient
+#     hwclient.cpp
+# )
 
-target_link_libraries(
-  hwclient
-    zmq
-)
-
-
-add_executable(
-  mtserver
-    mtserver.cpp
-)
-
-target_link_libraries(
-  mtserver
-    zmq
-    pthread
-)
+# target_link_libraries(
+#   hwclient
+#     zmq
+# )
 
 
-add_executable(
-  main2
-    main2.cpp
-)
+# add_executable(
+#   mtserver
+#     mtserver.cpp
+# )
 
-target_link_libraries(
-  main2
-    riak-cpp
-    pthread
-    ${PROTOBUF_LIBRARY}
-    ${Boost_LIBRARIES}
-)
+# target_link_libraries(
+#   mtserver
+#     zmq
+#     pthread
+# )
 
 
+# add_executable(
+#   main2
+#     main2.cpp
+# )
 
-add_executable(
-  tpool
-    tpool.cpp
-)
+# target_link_libraries(
+#   main2
+#     riak-cpp
+#     pthread
+#     ${PROTOBUF_LIBRARY}
+#     ${Boost_LIBRARIES}
+# )
 
-target_link_libraries(
-  tpool
-    ${Boost_LIBRARIES}
-)
+
+
+# add_executable(
+#   tpool
+#     tpool.cpp
+# )
+
+# target_link_libraries(
+#   tpool
+#     ${Boost_LIBRARIES}
+# )
