--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(saltfish)
 cmake_minimum_required (VERSION 2.8)
 
 
-set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+# set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 # Package Dependencies
 # ==============================================================================
 find_package(
-  Boost 1.49
+  Boost 1.53
     COMPONENTS
       program_options
       system
@@ -25,7 +25,6 @@ include_directories(
   ${Boost_INCLUDE_DIR}
   ${GLOG_INCLUDE_DIR}
   ${PROTOBUF_INCLUDE_DIR}
-  /usr/local/src
 )
 
 
