SALTFISH schema validation uses iterators & more tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,44 @@
-find_package(GTest REQUIRED)
+include(ExternalProject)
 
-include_directories(${GTest_INCLUDE_DIR})
 include_directories(../src)
+
+ExternalProject_Add(
+    GTest
+    URL http://googletest.googlecode.com/files/gtest-1.7.0.zip
+    TIMEOUT 30
+    INSTALL_COMMAND ""
+)
+ExternalProject_Get_Property(GTest binary_dir)
+ExternalProject_Get_Property(GTest source_dir)
+include_directories(${source_dir}/include)
+link_directories(${binary_dir})
+enable_testing(true)
+
+ExternalProject_Add(
+    GMock
+    URL http://googlemock.googlecode.com/files/gmock-1.7.0.zip
+    TIMEOUT 30
+    INSTALL_COMMAND ""
+)
+ExternalProject_Get_Property(GMock binary_dir)
+ExternalProject_Get_Property(GMock source_dir)
+include_directories(${source_dir}/include)
+link_directories(${binary_dir})
 
 
 add_executable(
   tests
     test_service_utils.cpp
+    ${source_dir}
 )
+add_dependencies(tests GTest)
+add_dependencies(tests GMock)
 target_link_libraries(
   tests
     gtest
     saltfish_service
 )
+
 
 # file(GLOB TEST_FILES *_test.cpp)
 
