SALTFISH spiked converting tests to use py unittest

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -10,7 +10,7 @@ riak {
 # MariaDB SQL DBMS for source metadata
 maria_db {
   host: "localhost"
-  db: "test"
+  db: "mlaas"
   user: "root"
   password: "lanasucks"
 }
