SALTFISH spiked RabbitMQ publisher

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -1,6 +1,12 @@
 # Bind string where to listen (ZMQ format)
 bind_str: "tcp://127.0.0.1:5555"
 
+# Maximum number of IDs that can be generated in one request
+max_generate_id_count: 1000
+
+# Prefix for Riak bucket where sources' data is kept
+sources_data_bucket_prefix: "/ml/sources/data/"
+
 # Riak cluster
 riak {
   host: "localhost"
@@ -13,4 +19,12 @@ maria_db {
   db: "mlaas"
   user: "root"
   password: "lanasucks"
+}
+
+# RabbitMQ configuration
+rabbit_mq {
+  host: "localhost"
+  port: 5672
+  user: "guest"
+  password: "guest"
 }
