--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -108,6 +108,17 @@ target_link_libraries(
     ${PROTOBUF_LIBRARY}
 )
 
+add_executable(
+  test_riak
+    test_riak.cpp
+)
+target_link_libraries(
+  test_riak
+    riakpp
+    ${Boost_LIBRARIES}
+    ${PROTOBUF_LIBRARY}
+)
+
 
 # add_executable(
 #   main2
