SALTFISH minor style fixes

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -7,7 +7,7 @@ max_generate_id_count: 1000
 # Prefix for Riak bucket where sources' data is kept
 sources_data_bucket_prefix: "/ml/sources/data/"
 
-# Riak cluster
+# Riak cluster nodes
 riak {
   host: "localhost"
   port: 10017
