--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -16,6 +16,7 @@ riak {
 # MariaDB SQL DBMS for source metadata
 maria_db {
   host: "localhost"
+  port: 3306
   db: "mlaas"
   user: "root"
   password: "lanasucks"
