--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -18,14 +18,13 @@ maria_db {
   host: "localhost"
   port: 3306
   db: "mlaas"
-  user: "root"
-  password: "lanasucks"
+  user: "super"
+  password: "QkFp9ar9wp95dAt5"
 }
 
-# RabbitMQ configuration
-rabbit_mq {
+# Redis configuration
+redis {
   host: "localhost"
-  port: 5672
-  user: "guest"
-  password: "guest"
+  port: 6379
+  key: "saltfish:pub"
 }
