Switched to error_conditions for SQL + added get_sources rpc method

--- a/etc/test.conf
+++ b/etc/test.conf
@@ -5,7 +5,7 @@ bind_str: "tcp://127.0.0.1:5555"
 max_generate_id_count: 1000
 
 # Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "/ml/sources/data/"
+sources_data_bucket_prefix: "/test/ml/sources/data/"
 
 # Riak cluster nodes
 riak {
