--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -5,7 +5,11 @@ bind_str: "tcp://127.0.0.1:5555"
 max_generate_id_count: 1000
 
 # Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "/ml/sources/data/"
+sources_data_bucket_prefix: "/sources/data/"
+
+# Riak bucket where to cache sources' schemas
+schemas_bucket: "/sources/schemas"
+
 
 # Riak cluster nodes
 riak {
@@ -19,7 +23,7 @@ maria_db {
   port: 3306
   db: "mlaas"
   user: "super"
-  password: "QkFp9ar9wp95dAt5"
+  password: "6mt3NdqK4old0X0G"
 }
 
 # Redis configuration
