--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -5,12 +5,12 @@ bind_str: "tcp://127.0.0.1:5555"
 max_generate_id_count: 1000
 
 # Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "/ml/sources/data/"
+sources_data_bucket_prefix: "/sources/data/"
 
 # Riak cluster nodes
 riak {
   host: "localhost"
-  port: 10017
+  port: 8087
 }
 
 # MariaDB SQL DBMS for source metadata
