more cherry picking of commits from treadmill branch

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -7,6 +7,9 @@ max_generate_id_count: 1000
 # Prefix for Riak bucket where sources' data is kept
 sources_data_bucket_prefix: "/sources/data/"
 
+# Riak bucket where to cache sources' schemas
+schemas_bucket: "/sources/schemas"
+
 # Riak cluster nodes
 riak {
   host: "localhost"
@@ -19,7 +22,7 @@ maria_db {
   port: 3306
   db: "mlaas"
   user: "super"
-  password: "QkFp9ar9wp95dAt5"
+  password: "6mt3NdqK4old0X0G"
 }
 
 # Redis configuration
