use : instead of / in bucket names and base64 encode ids

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -5,10 +5,10 @@ bind_str: "tcp://127.0.0.1:5555"
 max_generate_id_count: 1000
 
 # Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "/sources/data/"
+sources_data_bucket_prefix: "sources:data:"
 
 # Riak bucket where to cache sources' schemas
-schemas_bucket: "/sources/schemas"
+schemas_bucket: "sources:schemas"
 
 # Riak cluster nodes
 riak {
