--- a/etc/test.conf
+++ b/etc/test.conf
@@ -1,14 +1,14 @@
 # Bind string where to listen (ZMQ format)
-bind_str: "tcp://127.0.0.1:5555"
+bind_str: "tcp://127.0.0.1:15555"
 
 # Maximum number of IDs that can be generated in one request
 max_generate_id_count: 1000
 
 # Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "/test/sources/data/"
+sources_data_bucket_prefix: "test:sources:data:"
 
 # Riak bucket where to cache sources' schemas
-schemas_bucket: "/test/sources/schemas"
+schemas_bucket: "test:sources:schemas"
 
 # Riak cluster nodes
 riak {
