added random index per record for train/test splitting

--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -4,6 +4,9 @@ bind_str: "tcp://127.0.0.1:5555"
 # Maximum number of IDs that can be generated in one request
 max_generate_id_count: 1000
 
+# Maximum value for the record random index
+max_random_index: 1000000000
+
 # Prefix for Riak bucket where sources' data is kept
 sources_data_bucket_prefix: "sources:data:"
 
