refactored source -> dataset, real -> numerical, feature_type -> type, cats -> categoricals

--- a/etc/test.conf
+++ b/etc/test.conf
@@ -7,11 +7,11 @@ max_generate_id_count: 1000
 # Maximum value for the record random index
 max_random_index: 7
 
-# Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "test:sources:data:"
+# Prefix for Riak bucket where dataset records are kept
+records_bucket_prefix: "test:datasets:records:"
 
-# Riak bucket where to cache sources' schemas
-schemas_bucket: "test:sources:schemas"
+# Riak bucket where to cache dataset schemas
+schemas_bucket: "test:datasets:schemas"
 
 # Riak cluster nodes
 riak {
