--- a/etc/saltfish.conf
+++ b/etc/saltfish.conf
@@ -7,11 +7,11 @@ max_generate_id_count: 1000
 # Maximum value for the record random index
 max_random_index: 1000000000
 
-# Prefix for Riak bucket where sources' data is kept
-sources_data_bucket_prefix: "sources:data:"
+# Prefix for Riak bucket where dataset records are kept
+records_bucket_prefix: "datasets:records:"
 
-# Riak bucket where to cache sources' schemas
-schemas_bucket: "sources:schemas"
+# Riak bucket where to cache dataset schemas
+schemas_bucket: "datasets:schemas"
 
 # Riak cluster nodes
 riak {
